# fp-2024-cub-fall

./: 7_2.txt  CHANGELOG.md  Explanations.txt  LICENSE  Main.hs  README.md  Raport.txt  haskudoku-solver.cabal  lambda.txt  lambda_expr.txt  package.yaml  proj.cabal  scientific-calculator.cabal  sdk.html  site.html  stack.yaml  static-server.cabal  terms.txt  test.txt
.github/workflows/: test.yaml
.stack-work/: stack.sqlite3
HW1/: Main.hs
Minesweeper/: .gitignore  Minesweeper.cabal  package.yaml
Minesweeper/app/: Main.hs
Minesweeper/report/: Report.md
Minesweeper/src/: ConsoleUI.hs  ErrorHandling.hs  GameLogic.hs  Grid.hs
Minesweeper/test/: Test.hs
Minesweeper/test/Test/: TestConsole.hs  TestErrorHandling.hs  TestGameLogic.hs  TestGrid.hs  TestProperty.hs
PBT/: PBT.cabal  package.yaml
PBT/src/HW/: Compiler.hs  Eval.hs
PBT/src/Reader/: Main.hs
PBT/test/: Spec.hs  Test.hs
PBT/test/Test/: Compiler.hs  Interpreter.hs
ReversiFinal/: CHANGELOG.md  LICENSE  ReversiFinal.cabal
ReversiFinal/app/: Main.hs
ReversiFinal/src/: Game.hs  Logic.hs  Rendering.hs
ReversiFinal/test/: Main.hs
ScientificCalculator/: .calculator_history  CHANGELOG.md  README.md  ScientificCalculator.cabal  package.yaml
ScientificCalculator/app/: Main.hs
ScientificCalculator/src/: CalcError.hs  Eval.hs  Expr.hs  Memory.hs  ParserExpr.hs  Util.hs
ScientificCalculator/test/: ApplyFunctions.hs  Spec.hs  UnitTest.hs
TextFileAnalyzer/: README.md  TextFileAnalyzer.cabal  package.yaml
TextFileAnalyzer/Test/: ErrorHandlingSpec.hs  FileReaderSpec.hs  FrequentWordsSpec.hs  NGramAnalysisSpec.hs  Spec.hs  StatisticsSpec.hs  WordCloudSpec.hs
TextFileAnalyzer/Test/testfiles/: 10000words.txt
TextFileAnalyzer/app/: Main.hs
TextFileAnalyzer/bench/: Benchmark.hs
TextFileAnalyzer/macos_trick/: FileReaderSpec.hs  TextUtilsSpec.hs
TextFileAnalyzer/src/: ErrorHandling.hs  FileReader.hs  FrequentWords.hs  Interface.hs  NGramAnalysis.hs  Statistics.hs  TextUtils.hs  WordCloud.hs
TextFileAnalyzer/test/: Spec.hs  StatisticsSpec.hs
app/: Main.hs
benchmark/: Main.hs
common/: TestUtil.hs
expr/: expr.cabal  package.yaml
expr/app/: Main.hs
expr/src/: BaseExpr.hs  Err.hs  Error.hs  Expr.hs  Interpreter.hs  Interpretor.hs  Lib.hs
expr/test/: Spec.hs
fileAnalyzer/: CHANGELOG.md  README.md  fileAnalyzer.cabal  package.yaml  test1.txt  test_common_words.txt  text.txt
fileAnalyzer/app/: Main.hs
fileAnalyzer/src/: Lib.hs
fileAnalyzer/test/: Spec.hs
midterm/: midterm.cabal  package.yaml
midterm/app/: Main.hs
midterm/src/: .Directory.hs.swp  Directory.hs  Tree.hs
minesweeper/: minesweeper.cabal  stack.yaml
minesweeper/app/: Main.hs
minesweeper/src/: Game.hs
minesweeper/src/Grid/: Core.hs  Generation.hs  Operation.hs
minesweeper/test/: Spec.hs
minesweeper_hs/: LICENSE  README.md  Report.md  minesweeper.cabal  stack.yaml
minesweeper_hs/app/: Main.hs
minesweeper_hs/src/: Minesweeper.hs
minesweeper_hs/test/: Spec.hs
monads/: Lambda.txt  lambda.txt  monads.cabal  package.yaml  stack.yaml
monads/app/: Main.hs
monads/monads/: monads.cabal  package.yaml
monads/monads/src/HW/: Eval.hs
monads/monads/test/: Spec.hs  proofs.hs
monads/src/: Expr.hs  Util.hs
monads/src/Cont/: MyCont.hs
monads/src/FailCont/: EmailValidator.hs  FailCont.hs  Main.hs
monads/src/HW/: Compiler.hs  Eval.hs  Main.hs  StackMachine.hs
monads/src/Reader/: Eval.hs  Main.hs  MyReader.hs
monads/src/State/: Main.hs  MyState.hs  Renamer.hs
monads/test/: Main.hs  Spec.hs  Test.hs  UnitTest.hs  task2.txt
monads/test/Test/: Prop.hs  Unit.hs
reversi/: CHANGELOG.md  package.yaml  reversi.cabal  run.cmd  run.sh  test.cmd  test.sh
reversi/app/: Main.hs
reversi/src/: Board.hs  ConsoleUI.hs  GameLogic.hs
reversi/test/: Spec.hs
spell-checker/: CHANGELOG.md  package.yaml  spell-checker.cabal  stack.yaml
spell-checker/app/: Main.hs
spell-checker/data/: dictionary.txt  text.txt
spell-checker/src/: Dictionary.hs  Error.hs  ErrorHandler.hs  Lib.hs  SpellChecker.hs
spell-checker/test/: Spec.hs
src/: Eval.hs  Evaluator.hs  Expr.hs  Interpreter.hs  Main.hs  Memory.hs  MyDebugger.hs  MyRegex.hs  Parser.hs  Reader.hs  Sudoku.hs
static/: MainPage.hs
static-server/: README.md  package.yaml
static-server/app/: Main.hs
static-server/src/: MyRegex.hs
tesst/: Test.hs
test/: Spec.hs  Sudokutest.hs
