cabal-version:       2.2

name:                minesweeper
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/minesweeper#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2024 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

library
  exposed-modules:    Cell
                      Grid.Core
                      Grid.Generation
                      Grid.Operation
                      Game
  hs-source-dirs:     src
  default-language:   Haskell2010
  build-depends:      base >= 4.7 && < 5,
                      random,
                      containers,
                      split
  ghc-options:        -Wall
                      -Wcompat
                      -Widentities
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wmissing-export-lists
                      -Wmissing-home-modules
                      -Wpartial-fields
                      -Wredundant-constraints

executable minesweeper
  main-is:             Main.hs
  hs-source-dirs:      app
  build-depends:       base >= 4.7 && < 5,
                       minesweeper,
                       random,
                       containers,
                       split
  default-language:    Haskell2010
  ghc-options:         -Wall